# symphonia-adapters

./: Cargo.toml
crates/symphonia-adapter-fdk-aac/: Cargo.toml
crates/symphonia-adapter-fdk-aac/src/: lib.rs
crates/symphonia-adapter-fdk-aac/src/adts/: mod.rs
crates/symphonia-adapter-fdk-aac/src/meta/: mod.rs
crates/symphonia-adapter-libopus/: Cargo.toml
crates/symphonia-adapter-libopus/src/: decoder.rs  lib.rs
tests/: Cargo.toml
tests/tests/: integration_test.rs
