[workspace]
members = ["./crates/*", "tests"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89"
authors = ["Austin Schey <aschey13@gmail.com>"]
repository = "https://github.com/aschey/symphonia-adapters"
homepage = "https://github.com/aschey/symphonia-adapters"
include = ["/src", "/examples", "/tests", "LICENSE-MIT", "LICENSE-APACHE"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "symphonia", "aac", "opus"]

[workspace.dependencies]
fdk-aac = { git = "https://github.com/tsar-boomba/fdk-aac-rs" }
opusic-sys = { git = "https://github.com/tsar-boomba/opusic-sys", default-features = false }
symphonia-core = { git = "https://github.com/tsar-boomba/Symphonia", branch = "dap" }
log = "0.4.28"

# test dependencies
symphonia = { git = "https://github.com/tsar-boomba/Symphonia", branch = "dap" }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
allow_attributes = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
missing_panics_doc = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"
