[package]
name = "symphonia-adapter-fdk-aac"
version = "0.1.3"
readme = "README.md"
description = "Adapter to use FDK AAC with Symphonia"
license = "(MIT OR Apache-2.0) AND MPL-2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
symphonia-core = { workspace = true }
fdk-aac = { workspace = true, features = ["decoder"] }
log = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
